--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,16 @@ body.lock {
     --fw-m: 500;
     --fw-b: 700;
     --fs-12: 0.75rem;
+    --fs-13: 0.813rem;
     --fs-16: 1rem;
     --fs-18: 1.125rem;
     --fs-20: 1.25rem;
     --fs-22: 1.375rem;
     --fs-24: 1.5rem;
+    --fs-28: 1.75rem;
     --fs-30: 1.875rem;
     --fs-40: 2.5rem;
+    --fs-48: 3rem;
     --fs-60: 3.75rem;
     --fs-80: 5rem;
     --fs-100: 6.25rem;
@@ -38,9 +41,11 @@ body.lock {
 
 .wrapper {
     width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* padding: 0 100px; */
 }
 
 .container {
