--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -5,6 +5,7 @@
 @media (max-width:1100px) {
     .header-nav {
         background: transparent;
+        padding: 0;
     }
 
     .header-nav ul {
@@ -16,15 +17,19 @@
     }
 
     .header-container {
-        padding: 0 50px;
+        padding: 0 75px;
     }
 
     .header-content::before {
         left: -50px;
+        width: 340px;
+        height: 280px;
     }
 
     .header-content::after {
         right: -50px;
+        width: 385px;
+        height: 385px;
     }
 
     .header-lines h1 {
@@ -33,37 +38,46 @@
 }
 
 @media (max-width:767px) {
+    .header-top-bar {
+        margin: 40px 0 30px 0;
+    }
+
     .header-container {
-        padding: 0 16px;
+        padding: 0 32px;
     }
 
     .header-content::before {
-        width: 340px;
-        height: 280px;
+        width: 306px;
+        height: 232px;
         right: 0;
         left: initial;
-        top:-110px;
+        top: -95px;
     }
 
     .header-content::after {
-        width: 385px;
-        height: 385px;
+        width: 316px;
+        height: 316px;
         left: 0;
         right: initial;
-        bottom:-170px;
+        bottom: -170px;
     }
 
     .header-lines h1 {
         font-size: var(--fs-28);
     }
+
     .header-lines {
         width: 90%;
     }
 }
 
 @media (max-width:425px) {
+    .header-container {
+        padding: 0 16px;
+    }
+
     .header-content::before {
-        right: 0;
+        right: -40px;
         left: initial;
     }
 
@@ -71,6 +85,4 @@
         left: 0;
         right: initial;
     }
-
-    
 }
