--- a/css/normalize.css
+++ b/css/normalize.css
@@ -88,17 +88,21 @@ video {
     vertical-align: baseline;
     color: #000;
     -webkit-tap-highlight-color: transparent;
+
 }
 
 
 * {
     -webkit-tap-highlight-color: transparent;
     font-family: "eUkraine", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 html {
     font-size: 1rem;
     font-family: "eUkraine", sans-serif;
+    overflow-x: hidden;
 }
 
 article,
@@ -118,6 +122,7 @@ section {
 body {
     line-height: 1;
     background: var(--main-bg-color);
+    
 }
 
 a {
