--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 .main {
     margin: 180px 0 0 0;
-    display: none;
+    width:100%;
+    overflow: hidden;
 }
 
 .stretched-words {
@@ -13,7 +14,7 @@
     font-size: var(--fs-100);
     font-weight: var(--fw-b);
     text-transform: uppercase;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .stretched-words span {
@@ -28,7 +29,7 @@
     content: "Якщо вам";
     color: var(--main-content-color);
     font-family: var(--ff-u);
-    font-size: var(--fs-100);
+    /* font-size: var(--fs-100); */
     font-weight: var(--fw-b);
     text-transform: uppercase;
     left: -110%;
@@ -42,7 +43,7 @@
     content: "Якщо вам";
     color: var(--main-content-color);
     font-family: var(--ff-u);
-    font-size: var(--fs-100);
+    /* font-size: var(--fs-100); */
     font-weight: var(--fw-b);
     text-transform: uppercase;
     left: 110%;
@@ -176,6 +177,7 @@
     font-family: var(--ff-u);
     font-size: var(--fs-60);
     font-weight: var(--fw-r);
+    line-height: 120%;
 }
 
 .dividing-line {
