--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body.lock {
     --fs-24: 1.5rem;
     --fs-28: 1.75rem;
     --fs-30: 1.875rem;
+    --fs-32: 2rem;
     --fs-40: 2.5rem;
     --fs-48: 3rem;
     --fs-60: 3.75rem;
